--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
               class="social-link"
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
-              ><img src="assets/images/instagram.png" alt="Instagram logo"
+              ><img
+                fetchpriority="low"
+                src="assets/images/instagram.png"
+                alt="Instagram logo"
             /></a>
           </li>
         </ul>
@@ -122,6 +125,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
+              fetchpriority="low"
               src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
               class="d-block w-100"
               alt="Man crossing road"
@@ -129,6 +133,7 @@
           </div>
           <div class="carousel-item">
             <img
+              fetchpriority="low"
               src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
               class="d-block w-100"
               alt="Happy crowd"
@@ -136,6 +141,7 @@
           </div>
           <div class="carousel-item">
             <img
+              fetchpriority="low"
               src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
               class="d-block w-100"
               alt="Couple dancing"
@@ -164,7 +170,11 @@
     </div>
     <div id="about">
       <div class="picture left">
-        <img src="./assets/images/nina.jpg" alt="Nina Carducci" />
+        <img
+          fetchpriority="low"
+          src="./assets/images/nina.jpg"
+          alt="Nina Carducci"
+        />
       </div>
       <div id="about-me">
         <h2 class="about-me__title">A propos de moi</h2>
@@ -190,54 +200,63 @@
       <div class="container py-3">
         <div class="gallery" style="display: none">
           <img
+            fetchpriority="low"
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
             alt="Concert scene"
           />
           <img
+            fetchpriority="low"
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
             alt="Corporate man"
           />
           <img
+            fetchpriority="low"
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
             alt="Smiling woman"
           />
           <img
+            fetchpriority="low"
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
             alt="Hands touching"
           />
           <img
+            fetchpriority="low"
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
             alt="Closed eyes portrait"
           />
           <img
+            fetchpriority="low"
             data-gallery-tag="Mariages"
             class="gallery-item"
             src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
             alt="Newlywed couple"
           />
           <img
+            fetchpriority="low"
             data-gallery-tag="Portrait"
             class="gallery-item"
             src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
             alt="Woman portrait"
           />
           <img
+            fetchpriority="low"
             data-gallery-tag="Concert"
             class="gallery-item"
             src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
             alt="Singer at concert"
           />
           <img
+            fetchpriority="low"
             data-gallery-tag="Entreprises"
             class="gallery-item"
             src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
@@ -339,7 +358,11 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.png" alt="Camera" />
+          <img
+            fetchpriority="low"
+            src="./assets/images/camera.png"
+            alt="Camera"
+          />
         </div>
       </div>
     </footer>
