--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <div class="picture right">
           <img
             fetchpriority="low"
-            src="./assets/images/camera.png"
+            src="./assets/images/camera.jpg"
             alt="Camera"
           />
         </div>
