--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta property="og:type" content="Site de photographie" />
     <meta property="og:url" content="https://ninacarducci.github.io/" />
-    <meta property="og:image" content="/assets/images/nina.webp" />
+    <meta property="og:image" content="/assets/images/nina.jpg" />
     <meta
       property="og:site_name"
       content="Site de photographie de Nina Carducci"
