modif img size and format

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <meta property="og:type" content="Site de photographie" />
     <meta property="og:url" content="https://ninacarducci.github.io/" />
-    <meta property="og:image" content="/assets/images/nina.jpg" />
+    <meta property="og:image" content="/assets/images/nina.webp" />
     <meta
       property="og:site_name"
       content="Site de photographie de Nina Carducci"
@@ -29,7 +29,7 @@
         "@context": "http://schema.org",
         "@type": "Person",
         "name": "Nina Carducci",
-        "image": "http://www.googleusercontent.com/assets/images/nina.png",
+        "image": "http://www.googleusercontent.com/assets/images/nina.webp",
         "jobTitle": "Photograph",
         "address": {
           "@type": "PostalAddress",
@@ -126,7 +126,7 @@
           <div class="carousel-item active">
             <img
               fetchpriority="low"
-              src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
+              src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
               class="d-block w-100"
               alt="Man crossing road"
             />
@@ -134,7 +134,7 @@
           <div class="carousel-item">
             <img
               fetchpriority="low"
-              src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
+              src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
               class="d-block w-100"
               alt="Happy crowd"
             />
@@ -142,7 +142,7 @@
           <div class="carousel-item">
             <img
               fetchpriority="low"
-              src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
+              src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
               class="d-block w-100"
               alt="Couple dancing"
             />
@@ -172,7 +172,7 @@
       <div class="picture left">
         <img
           fetchpriority="low"
-          src="./assets/images/nina.jpg"
+          src="./assets/images/nina.webp"
           alt="Nina Carducci"
         />
       </div>
@@ -360,7 +360,7 @@
         <div class="picture right">
           <img
             fetchpriority="low"
-            src="./assets/images/camera.jpg"
+            src="./assets/images/camera.webp"
             alt="Camera"
           />
         </div>
