--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <!--twitter-->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="ninacarducci" />
     <meta name="twitter:creator" content="ninacarducci" />
@@ -13,6 +14,7 @@
       content="Nina Carducci, photographe professionnelle à Bordeaux, capture vos plus beaux moments"
     />
     <meta name="twitter:image" content="/assets/images/nina.webp" />
+    <!--opengraph-->
     <meta
       property="og:title"
       content="Nina Carducci, photographe professionnelle à Bordeaux"
@@ -24,6 +26,7 @@
       property="og:site_name"
       content="Site de photographie de Nina Carducci"
     />
+
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
@@ -62,14 +65,6 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
-    <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
-    <script src="./assets/maugallery.js"></script>
-    <script src="./assets/scripts.js"></script>
   </head>
   <body>
     <header class="top-header">
@@ -366,5 +361,13 @@
         </div>
       </div>
     </footer>
+    <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/maugallery.js"></script>
+    <script src="./assets/scripts.js"></script>
   </body>
 </html>
