change rich snippet

--- a/index.html
+++ b/index.html
@@ -29,25 +29,26 @@
 
     <script type="application/ld+json">
       {
+        "priceRange": "100 to 500$",
+        "image": "/assets/images/nina.webp",
         "@context": "http://schema.org",
-        "@type": "Person",
-        "name": "Nina Carducci",
-        "image": "http://www.googleusercontent.com/assets/images/nina.webp",
-        "jobTitle": "Photograph",
+        "@type": "LocalBusiness",
+        "name": "Nina Carbucci",
+        "description": "Nina Carducci, photographe professionnelle à Bordeaux.",
         "address": {
           "@type": "PostalAddress",
+          "streetAddress": "68 avenue Alsace-Lorraine",
           "addressLocality": "Bordeaux",
-          "postalCode": "33200",
-          "streetAddress": "68 avenue Alsace-Lorraine"
-        }
-      }
-    </script>
-    <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "ContactPoint",
-        "telephone": "(33 5) 56 67 78 89",
-        "hoursAvailable": "Lu-Ve 10:00-19:00"
+          "postalCode": "33200"
+        },
+        "telephone": "05 56 67 78 89",
+        "openingHours": "Mo-Fr 10:00-19:00",
+        "employees": [
+          {
+            "@type": "Person",
+            "name": "Nina Carbucci"
+          }
+        ]
       }
     </script>
     <title>Nina Carducci - Photographe</title>
