change rich snippet

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
         "description": "Nina Carducci, photographe professionnelle à Bordeaux.",
         "address": {
           "@type": "PostalAddress",
-          "adressCountry": "France"
-          'addressRegion': "Gironde"
+          "adressCountry": "France",
+          "addressRegion": "Gironde",
           "streetAddress": "68 avenue Alsace-Lorraine",
-
           "addressLocality": "Bordeaux",
           "postalCode": "33200"
         },
