--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
 
     <script type="application/ld+json">
       {
-        "priceRange": "100 to 500$",
-        "image": "/assets/images/nina.webp",
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
         "name": "Nina Carbucci",
+        "priceRange": "50 to 500$",
+        "image": "/assets/images/nina.webp",
         "description": "Nina Carducci, photographe professionnelle à Bordeaux.",
         "address": {
           "@type": "PostalAddress",
-          "adressCountry": "France",
+          "addressCountry": "FR",
           "addressRegion": "Gironde",
           "streetAddress": "68 avenue Alsace-Lorraine",
           "addressLocality": "Bordeaux",
           "postalCode": "33200"
         },
-        "telephone": "05 56 67 78 89",
+        "telephone": "(33 5) 56 67 78 89",
         "openingHours": "Mo-Fr 10:00-19:00",
         "employees": [
           {
             "@type": "Person",
-            "name": "Nina Carbucci"
+            "name": "Nina Carducci"
           }
         ]
       }
