rich snippet changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       {
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
-        "name": "Nina Carbucci",
+        "name": "Nina Carducci",
         "priceRange": "50 to 500$",
         "image": "/assets/images/nina.webp",
         "description": "Nina Carducci, photographe professionnelle à Bordeaux.",
