--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
           fetchpriority="low"
           src="./assets/images/nina.webp"
           alt="Nina Carducci"
+          class="picture-about"
         />
       </div>
       <div id="about-me">
