--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
+              class="carousel-img"
               fetchpriority="low"
               src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
               class="d-block w-100"
@@ -131,6 +132,7 @@
           </div>
           <div class="carousel-item">
             <img
+              class="carousel-img"
               fetchpriority="low"
               src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
               class="d-block w-100"
@@ -139,6 +141,7 @@
           </div>
           <div class="carousel-item">
             <img
+              class="carousel-img"
               fetchpriority="low"
               src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
               class="d-block w-100"
