--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       rel="stylesheet"
-      rel="preload"
+      media="all"
     />
     <meta charset="UTF-8" />
   </head>
